lib/Shared/Examples/Net/Amazon/S3/Fixture/error/no_such_bucket.pm

use strict;
use warnings;

use HTTP::Status;
use Shared::Examples::Net::Amazon::S3::Fixture;

Shared::Examples::Net::Amazon::S3::Fixture::error_fixture
    NoSuchBucket => HTTP::Status::HTTP_NOT_FOUND;
